tree-sitter-bml/grammar.js
    source_file: $ => repeat($._item),

    // ─── Items ────────────────────────────────────────────────────

    _item: $ => choice(
      $.function_definition,
      $.extern_function_declaration,
      $.static_definition,
      $.const_definition,
      $.struct_definition,
      $.enum_definition,
      $.peripheral_definition,
      $.register_definition,
      $.field_definition,
      $.import_statement,
      $.owns_statement,
      $.comptime_assert,
    ),

    // ─── Function definitions ─────────────────────────────────────

    function_definition: $ => seq(
      optional('export'),
      'fn',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('return_type', $.return_type)),
      repeat($.function_annotation),
      field('body', $.block),
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')',
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    return_type: $ => seq('->', $._type),

    function_annotation: $ => choice(
      $.context_annotation,
      $.isr_annotation,
      $.naked_annotation,
      $.section_annotation,
    ),

    context_annotation: $ => seq(
      '@',
      'context',
      '(',
      'thread',
      ')',
    ),

    owns_statement: $ => seq(
      'owns',
      $.owns_path,
      repeat(seq(',', $.owns_path)),
      ';',
    ),

    owns_path: $ => seq(
      field('peripheral', $.identifier),
      optional(seq('.', field('register', $.identifier))),
    ),

    // ─── comptime_assert ──────────────────────────────────────────

    struct_definition: $ => seq(
      optional('export'),
      'struct',
      field('name', $.identifier),
      optional($.repr_annotation),
      '{',
      commaSep($.struct_field),
      '}',
    ),

    repr_annotation: $ => seq('@', 'repr', '(', choice('C', 'packed'), ')'),

    struct_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      repeat($.field_attribute),
    ),

    // `@be`/`@le` (byte order) and `@extent(addr_field [, xN])` (transfer
    // extent armed by this field, scaled N bytes per count unit).
    field_attribute: $ => seq('@', choice(
      'be',
      'le',
      seq('extent', '(', $.identifier, optional(seq(',', $.extent_multiplier)), ')'),
    )),

    extent_multiplier: $ => token(/x[0-9]+/),

    // ─── Enum definition ──────────────────────────────────────────

    enum_variant_def: $ => seq(
      field('name', $.identifier),
      optional(seq('=', $.integer_literal)),
    ),

    // ─── Peripheral definition ────────────────────────────────────

    register_definition: $ => seq(
      'reg',
      field('name', $.identifier),
      'offset',
      $.integer_literal,
      '{',
      repeat($.field_definition),
      '}',
    ),

    field_definition: $ => seq(
      'field',
      field('name', $.identifier),
      ':',
      $.named_type,
      'bit',
      '[',
      $.integer_literal,
      optional(seq('..', $.integer_literal)),
      ']',
      optional(field('access', $.access_modifier)),
    ),

    access_modifier: $ => choice('readonly', 'writeonly'),

    // ─── Imports ──────────────────────────────────────────────────
    // `export` is a declaration-site modifier on items (see each *_definition
    // rule above), not a statement. There is no selective-import form
    // (`import m { a, b };` is rejected by the compiler as E109).

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),
      '}',
    ),

    _statement: $ => choice(
      $.variable_declaration,
      $.assignment_statement,
      $.expression_statement,
      $.if_statement,
      $.loop_statement,
      $.while_statement,
      $.for_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.match_statement,
      $.claim_statement,
      $.asm_statement,
      $.assume_statement,
      $.assert_statement,
      $.block,
    ),

    // `claim X { ... }` -- a masked ownership window over a @shared static.
    variable_declaration: $ => seq(
      choice('var', 'const'),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
      ';',
    ),

    assignment_statement: $ => seq(
      field('left', $._lvalue),
      field('operator', $._assignment_operator),
      field('right', $._expression),
      ';',
    ),

    _assignment_operator: $ => choice(
      '=', '+=', '-=', '*=', '/=', '%=',
      '+%=', '-%=', '*%=',
      '&=', '|=', '^=', '<<=', '>>=',
    ),

    _lvalue: $ => choice(
      $.identifier,
      seq(field('object', $._lvalue), '.', field('field', $.identifier)),
      seq(field('object', $._lvalue), '[', field('index', $._expression), ']'),
      seq('*', field('target', $._expression)),
    ),

    _expression: $ => choice(
      $.cast_expression,
      $.enum_variant_expression,
      $.sizeof_expression,
      $.binary_expression,
      $.comparison_expression,
      $.equality_expression,
      $.logical_and_expression,
      $.logical_or_expression,
      $.unary_expression,
      $.addr_of_mut_expression,
      $.call_expression,
      $.field_expression,
      $.index_expression,
      $._primary_expression,
    ),

    cast_expression: $ => prec.left(PREC.AS_CAST, seq(
      field('value', $._expression),
      'as',
      field('type', $._type),
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $._expression),
      field('arguments', $.argument_list),
    )),

    field_expression: $ => prec(PREC.FIELD_ACCESS, seq(
      field('object', $._expression),
      '.',
      field('field', $.identifier),
    )),

    argument_list: $ => seq(
      '(',
      commaSep($._expression),
      ')',
    ),

    _type: $ => choice(
      $.named_type,
      $.pointer_type,
      $.mutable_pointer_type,
      $.array_type,
      $.function_pointer_type,
      $.view_type,
      $.ring_type,
      $.bits_type,
      $.addr_type,
    ),

    // `addr in <region>`: an in-memory handoff slot (descriptor field).
    named_type: $ => $.identifier,

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: $ => {
      const suffix = '(i8|i16|i32|i64|u8|u16|u32|u64)';
      return token(new RegExp(`0[xX][0-9a-fA-F_]+${suffix}?|[0-9][0-9_]*${suffix}?`));
    },

    // digits with a fractional part and/or an exponent, then optional h/f/d suffix.
    boolean_literal: $ => choice('true', 'false'),
